--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   share: ^0.5.3
+  transparent_image: ^0.1.0
 
 dev_dependencies:
   flutter_test:
